# message

./: CMakeLists.txt  LibraryTestsGen.cmake  README.md
cmake/: messageConfig.cmake.in
src/: CMakeLists.txt  Message.cpp  Message.hpp  hello-world.cpp
tests/use_installed_library/: CMakeLists.txt
